--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react-helmet": "^5.0.13",
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.0",
+    "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "@uifabric/fluent-theme": "^7.1.4",
     "@uifabric/icons": "^7.3.0",
     "@uifabric/react-cards": "^0.109.1",
+    "axios": "^0.19.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-typescript": "^6.0.0",
@@ -35,9 +37,11 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toasts": "^3.0.6",
     "rsjs": "^0.1.2",
     "typeface-roboto": "^0.0.75",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
